Updates from Overleaf

--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -258,34 +258,33 @@ These two principles, overnight sailing distances and sharing a language, have b
 
 %\citep[194]{irwin1994prehistoric} inter-island vogagýing existed and micronesian atolls are precarious
 
-\textbf{Grouping islands based on voyaging distances}. \citet{mark_1986, marck2000} has suggested that islands within 100 miles\footnote{Note that Marck uses \emph{land} miles, not \emph{nautical} miles (Marck personal correspondence).} are reachable by overnight voyages in a traditional canoe (24h). This is taken to represent a good approximation of island connections of frequent contact and is supported by other accounts, such as \citep[38]{gladwin2009east} who notes a higher frequency of travel between islands within 100 miles of each other. This is a distance people may travel for tribute offerings, trade and community events, which strengthens cultural ties. Further away, and it may not be so easy to get together as often. Fig. \ref{appendix_Marck_2000_east_poly} shows this principle applied to central East Polynesia.
+\textbf{Grouping islands based on voyaging distances}. \citet{mark_1986, marck2000} has suggested that islands within 100 miles\footnote{Note that Marck uses \emph{land} miles, not \emph{nautical} miles (Marck, personal correspondence 2018).} are reachable by overnight voyages in a traditional canoe. This is taken to represent a good approximation of island connections of frequent contact and is supported by other accounts, such as \citep[38]{gladwin2009east} who notes a higher frequency of travel between islands within 100 miles of each other. This is a distance people may travel for tribute offerings, trade and community events, which strengthens cultural ties. Further away, and it may not be so easy to get together as often. Fig. \ref{appendix_Marck_2000_east_poly} shows this principle applied to central East Polynesia.
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\textwidth]{Marck_2000_east_poly}
-\caption{{Map of central East Polynesia from \citet{marck2000}, showing 100 mile radii.}}
+\includegraphics[width=0.8\textwidth]{Marck_2000_east_poly}
+\caption{{Map of central East Polynesia from \citet{marck2000}, showing 100 mile buffer zones.}}
 \label{appendix_Marck_2000_east_poly}
 \end{figure}
 
-This idea proved useful also in terms of understanding language communities. \citet{mark_1986, marck2000} demonstrates that this way of grouping islands often conforms neatly to linguistic boundaries --- especially in the north and east Pacific. For example, in Fig  \ref{appendix_Marck_2000_east_poly} the boundaries mostly line up well with well-established linguistic boundaries (with some exceptions, such as Tuamotus being split Australs merged etc). These island groups also line up somewhat with the ``interaction spheres'' in East Polynesia identified by \citet{rolett2002voyaging}\footnote{\citet{rolett2004environmental} consider islands within 50 km of each other as a meaningful unit, but do not extrapolate on why this is.}. 
+\citet{mark_1986, marck2000} demonstrates that this way of grouping islands often conforms neatly to linguistic boundaries --- especially in the north and east Pacific. For example, in Fig. \ref{appendix_Marck_2000_east_poly} the boundaries mostly line up well with well-established linguistic boundaries (with some exceptions, such as Tuamotus being split Australs merged etc). These island groups also line up somewhat with the ``interaction spheres'' in East Polynesia identified by \citet{rolett2002voyaging}\footnote{\citet{rolett2004environmental} consider islands within 50 km of each other as a meaningful unit, but do not give further details.}. 
 
-However, this way of grouping islands does not take into account currents and winds - they are ``just'' a simple 100-mile buffer zone from the coastline. \citet{NZSA_overnight_2023} improved upon this initial idea by incorporating a cost-surface that accounts for wind, currents and canoe profile shapes. Using data on winds and currents from 
-\citet{noaa_2019} and \citet{apdrc_2014}, a cost-surface model of the Pacific Ocean was created. In addition, a vessel model of a canoe was simulated (a v-shaped outrigger, similar toFig. \ref{appendix_kane_fishing_canoe}). Voyages of 12 hours were simulated from different seed points on islands over different times over the year as currents and winds vary with seasons.  
+However, this way of grouping islands does not consider currents and winds - they are ``just'' a simple 100-mile buffer zone from the coastline. \citet{NZSA_overnight_2023} improved upon this initial idea by incorporating a cost-surface that accounts for wind, currents and canoe profile shapes. Using data on winds and currents from 
+\citet{noaa_2019} and \citet{apdrc_2014}, a cost-surface model of the Pacific Ocean was created. In addition, a vessel model of a canoe was simulated (a v-shaped outrigger, similar to Fig. \ref{appendix_kane_fishing_canoe}). Voyages of 12 hours were simulated from different seed points on islands over different times over the year as currents and winds vary with seasons. Islands were grouped together if these simulated voyages connected them.
 
-The novel results were largely similar to Marck's groupings, strengthening the assumption that 100 miles is a decent approximation. It is this new island grouping that is used in this study. I refer to these island groups as \textit{overnight distance groups}. Fig. \ref{appendix_polygon_plot_SBZR} shows this grouping, along with the number of languages per group. Out of the 56 island groups of this kind that were possible to include in the analysis, 45 have only one language.
-
+The novel results (Fig. \ref{appendix_SBZR_cost}) were largely similar to Marck's groupings (Fig. \ref{appendix_SBZR_buffer}), strengthening the assumption that 100 miles is a decent approximation. It is this new island grouping that is used in this study. We refer to these island groups as \textit{overnight distance groups}. Fig. \ref{appendix_polygon_plot_SBZR} shows this grouping, along with the number of languages per group. Out of the 56 island groups of this kind that were possible to include in the analysis, 45 have only one language.
 
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.7\textwidth]{Herb-Kane_Fishing-Canoe-off-North-Kona.jpg}
-\caption{{The painting ``A Fishing Canoe off North Kona'' by Herbert Kawainui K{\=a}ne. Illustration of an outrigger canoe with v-shaped hull. Copyright Herbert K. K{\=a}ne, LLC.}}
+\caption{{The painting ``A Fishing Canoe off North Kona'' by Herbert Kawainui K{\=a}ne. Illustration of an outrigger canoe with v-shaped hull. Copyright Herbert K. K{\=a}ne, LLC. Used with permission.}}
 \label{appendix_kane_fishing_canoe}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{SBZR_buffer.png}
-\caption{{}}
+\caption{Map of Marck's 100 miles buffer zones, from \citet{NZSA_overnight_2023}.}
 \label{appendix_SBZR_buffer}
 \end{figure}
 
@@ -293,14 +292,9 @@ The novel results were largely similar to Marck's groupings, strengthening the a
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{SBZR_cost.png}
-\caption{{}}
+\caption{Map of island groups based on physical cost model from \citet{NZSA_overnight_2023}.}
 \label{appendix_SBZR_cost}
 \end{figure}
-
-
-
-
-
 
 \begin{sidewaysfigure}[p]
 \centering
@@ -308,6 +302,9 @@ The novel results were largely similar to Marck's groupings, strengthening the a
 \caption{{Distribution of languages per overnight sailing distance island group.}}
 \label{appendix_polygon_plot_SBZR}
 \end{sidewaysfigure}
+
+
+Several of these island groups are much larger than the shared language groups. The islands of Vanuatu  (including Anuta and Tikopia) and Temotu are all within the same group; this is similar to the groups considered in \citet{pawley2007}). There is also a large discrepancy between the number of languages, with Vanuatu and Temotu having 130 and S\={a}moa still only one. \\
 
 \textbf{Grouping islands based on (at least one) shared language}. If two islands share a language, they are classified as of the same island group. For example, all islands of the Tuamotu archipelago (where Tuamotuan [tuam1242] is spoken) are merged, even though they are grouped into several separate island groups by the overnight distance approach. Vanuatu, being a land of great language diversity, has a different group for almost every island. Another example is the Tungaru islands (western islands of modern-day Kiribati) and Tuvalu which actually share a language. Most people of the country of Tuvalu speak Tuvaluan, but there is one island, Nui, where Tungaru (Gilbertese [gilb1244]) is also spoken \citep{faaniu1983tuvalu, macdonald_2020, omniglot_tuvaluan}. We will call these island groups \textit{shared language groups}. Fig \ref{appendix_polygon_plot_medium} shows these groups, and their language counts. Out of the 65 island groups that were included in the modelling, 21 had only one language.
 
