--- a/latex/main.tex
+++ b/latex/main.tex
@@ -414,28 +414,12 @@ Fig.~\ref{medium_model_predict} show the predictions of the model with island gr
 \end{figure}
 
 
-
-
-
 % #Frederic says: could also compute pareto-k https://mc-stan.org/loo/reference/pareto-k-diagnostic.html
 
-Most of the island groups can be removed with little effect on the overall accuracy of predictions (see Fig.  in \ref{appendix_supp_figs}), however, when Malakula (central Vanuatu), is left out, the difference average difference between predicted and observed becomes lower (1.3 $\rightarrow$ 0.9). Malakula is the island group with the highest number of languages (see Fig \ref{appendix_polygon_plot_medium} in appendix \ref{appendix_sec:island_geo}). Political complexity remains an important predictor regardless of which island group is dropped.
+Most of the island groups can be removed with little effect on the overall accuracy of predictions both in the case of shared language groups and overnight sailing distances, when control for spatial and/or phylogenetic non-independence is present. When there is no such control, dropping out Malakula, Kanaky or Laguas yan gåni drops the accuracy of prediction for the shared language groups and Vanuatu + Temotu, Fiji, Kanaky and Laguas yan gåni does the same for the overnight sailing-distance groups. These island groups primarily stand out by many languages (Malakula, Kanaky and Vanuatu at large, see Fig. \ref{appendix_polygon_plot_medium} in the appendices) and the depth of time (Laguas yan gåni). It is not as clear in what way Fiji stands out, it may be a combination of sharing many features with neighbouring islands such as S\={a}moa, Tahiti and Tonga but having more languages (8 as compared to 1). See appendix \ref{appendix_supp_figs_barplots_diff} for plots of differences in predictions when island groups are dropped out one at a time.
 
-%and shoreline in interaction with time depth are the variables that have a significant impact, i.e. do not cross zero (see coefficent distributions in Figs.  and \ref{brms_medium_group_full_effect_ridge_panels} in appendix \ref{appendix_supp_figs}).
 
-For the overnight sailing distances, several island groups are much larger than the previous grouping. The islands of Vanuatu  (including Anuta and Tikopia) and Temotu are all within the same group (see Fig \ref{appendix_polygon_plot_SBZR} in appendix \ref{appendix_sec:island_geo}; this is similar to the groups considered in \citet{pawley2007}). This also leads to a larger discrepancy between the number of languages, with Vanuatu and Temotu having 130 and S\={a}moa still only one. The average absolute difference between the predicted and observed number of languages is somewhat greater than for the previous grouping --- 1.6. Fig \ref{SBZR_model_predict} shows the prediction vs observed per island group.
-
-\begin{figure}[ht]
-\centering
-\includegraphics[width=0.6\textwidth]{latex/brms_predict_SBZR_control_spatial.png}
-\caption{Posterior prediction from the model with island grouped for overnight sailing distances (draws = 10,000). The dark blue triangles represent the observed number of languages, the green boxplot the predictions of the model. The middle of the box represents the median. The mean is represented with a yellow circle.}
-\label{SBZR_model_predict}
-\end{figure}
-
-%Shoreline:Settlement_date_grouping_finer§straddle_zero_95
-%environ_PC1:Shoreline§straddle_zero_95
-
-The most important variables in this model (i.e. 95\% confidence interval of coefficient distribution does not overlap 0) were: political complexity, environmental PC2, shoreline, time depth and time-depth in interaction with shoreline  (see Fig ). However, if we drop out Vanuatu + Temotu this no longer holds. When Vanuatu + Temotu are left out, the coefficient distribution of political complexity overlaps zero. Instead,  Shoreline in interaction with time depth and environmental PC1 in interaction with Shoreline are relevant predictors. When Vanuatu + Temotu are dropped out, the overall difference between predicted and observed values goes down the most (from 1.6 to 0.7, see Fig. \ref{appendix_brms_SBZR_dropped_out_plot_diff}). When Vanuatu + Temotu are excluded, the model is more accurate. If we ask this model that has been trained \emph{without} the Vanuatu + Temotu data to predict how many languages there are there, it grossly underestimates and proposes 7 languages (observed = 130). If we drop out any other island group (including Kanaky), political complexity remains an important predictor.
+%The most important variables in this model (i.e. 95\% confidence interval of coefficient distribution does not overlap 0) were: political complexity, environmental PC2, shoreline, time depth and time-depth in interaction with shoreline  (see Fig ). However, if we drop out Vanuatu + Temotu this no longer holds. When Vanuatu + Temotu are left out, the coefficient distribution of political complexity overlaps zero. Instead,  Shoreline in interaction with time depth and environmental PC1 in interaction with Shoreline are relevant predictors. When Vanuatu + Temotu are dropped out, the overall difference between predicted and observed values goes down the most (from 1.6 to 0.7, see Fig. \ref{appendix_brms_SBZR_dropped_out_plot_diff}). When Vanuatu + Temotu are excluded, the model is more accurate. If we ask this model that has been trained \emph{without} the Vanuatu + Temotu data to predict how many languages there are there, it grossly underestimates and proposes 7 languages (observed = 130). If we drop out any other island group (including Kanaky), political complexity remains an important predictor.
 
 %For tables of the predictor Estimates, Rhat and ESS of both models, please see appendix \ref{appendix_BRMS_model_tables}.
 
@@ -453,17 +437,17 @@ The most important variables in this model (i.e. 95\% confidence interval of coe
 \FloatBarrier
 \section{Discussion}
 \label{pol_study_discisson}
-The results indicate that political complexity could be relevant for understanding the dynamics of language diversification in Remote Oceania, but further studies are needed --- especially regarding Vanuatu. 
+The results indicate that political complexity may be relevant for understanding the dynamics of language diversification in Remote Oceania, but further studies are needed.
 
-When the island group Vanuatu + Temotu was dropped, the model for overnight sailing island groups no longer drew on political complexity as a relevant predictor of language richness. This may indicate that it primarily made use of the variable to tell apart Vanuatu + Temotu from all other island groups. Vanuatu + Temotu is by far the island group with the most languages, 130, and it is dominated by societies that are classed as level 1 on the scale of vertical political complexity used by the Ethnographic Atlas \citep{gray1998ethnographic} and other studies \citep{watts_2018}, see Fig. \ref{appendix_pol_complex_map} in appendix \ref{appendix_pol_complex}).
+As is clear in the DAG representing all relevant variables suggested in the previous literature (Fig. \ref{appendix_Predicting_lgs_DAG_full} in appendix \ref{appendix_DAG_def}) or the DAG representing the argumentation by \citet{pawley2007}, the link between political complexity and number of languages is not direct. It is most likely mediated through other factors such as network modularity, the propensity to maintain long-distance contact etc. 
 
-Furthermore, if we tease apart the argument concerning political complexity (for example in the full DAG in Fig. \ref{appendix_Predicting_lgs_DAG_full} in appendix \ref{appendix_DAG_def} or Fig. \ref{Predicting_lgs_DAG_andy} in section \ref{sec:previous_research}), we find that conceptually the link between the number of languages and political complexity is not direct. It could be mediated through other factors such as network modularity, the propensity to maintain long-distance contact etc. 
-
-\citet{watts_2018} found that politically complex societies in Oceania became Christian at a faster speed. This may indicate that changes propagate through a population quicker if the society is not egalitarian. If Christianity spreads faster in societies with higher complexity, it is possible to reason that other changes also might spread faster. If changes propagate quickly throughout a population, that leaves less possibility for diversification through natural drift or groups in the periphery staying more archaic compared to the centre. This interpretation relies on the understanding that the variable for political complexity (EA033) reveals something not only about jurisdictional power relationships in a given society, but also captures something about the social network of \emph{all} of its members (not just the leaders). Under this theory, people living in societies with higher political complexity would be able to travel further and have wider-ranging social networks, which in turn would lead to greater internal cultural homogeneity.
+\citet{watts_2018} found that politically complex societies in Oceania became Christian at a faster speed. This may indicate that changes propagate through a population quicker if the society is not egalitarian. If Christianity spreads faster in societies with higher complexity, it is possible to reason that other innovations (e.g. words, sounds etc) also might spread faster. If changes propagate quickly, that leaves less possibility for diversification within island groups via natural drift or due to groups in the periphery staying more archaic compared to the centre. This interpretation relies on the understanding that the variable for political complexity (EA033) reveals something not only about jurisdictional power relationships in a given society, but also captures something about the social network of \emph{all} of its members (not just the leaders). Given this hypothesis, people living in societies with higher political complexity would be able to travel further and have wider-ranging social networks due to less modularity and isolation, which in turn would lead to greater internal cultural homogeneity.
 
 Maintaining long-distance contact can indeed be a function of shared cultural identity. \citet[218-291]{skirgaard2020multilevel} notes that there are not only fewer languages in the island groups of Polynesia, but they are also more similar to each other lexically than languages in Vanuatu are. This relationship does not hold for grammatical features however, languages in Polynesia are about as different from each other grammatically as languages of Vanuatu and other island groups in Remote Oceania are (as measured by Grambank features, \citep{grambank_release}). It has been suggested, by \citet{silverstein1981limits}, \citet{francois2011} and others (cf. \citet{mansfield2023dialect}), that communities pay special attention to words and sound differences as emblematic of shared ties --- but grammar tends to fly under the radar in this respect. This difference between Vanuatu and Polynesia in terms of lexical dissimilarity and language richness, but the similarity in terms of grammatical diversification may indicate that the cause does indeed lie in attitudes and social network organisation  - similar to the findings of this study.
 
 \citet{curriemace2009} argue that the reason behind their results (higher political complexity = larger language areas) is that societies with higher political complexity are more likely to be able to replace existing groups in an area, or otherwise incorporate (and possibly assimilate) them. It may also be the case that diversity in Polynesia was reduced by later expansionist efforts by societies with higher political complexity. For example, the island of Niuafo'ou which lies between Tonga, 'Uvea and S\={a}moa is home to a language that is most closely related to 'Uvean. This language has however become \emph{more} similar to Tongan during the period of Tongan domination in the area 1000-1300's (see \citet{aswani1998tongan} and \citep[2-9]{tuskamoto_niuafoou}). It may be that politically complex societies do not only \emph{maintain} homogeneity by continuing to be in contact after first settlement, but can also reduce diversity which emerges after settlement through incorporation and cultural dominance later.
+
+The results of this study shows that accounting for spatial and phylogenetic non-independence of island groups is important.
 
 Whatever the political complexity variable is tracking, it is clear that it is one of the variables that most clearly picks out Vanuatu and that Vanuatu is the place with the most languages. Where did this difference in societal organisation come from? As previous studies have indicated (e.g. \citet{lynch1981melanesian}), the answer may lie in contact with people of non-East Asian origin further west. It is possible that contact with communities from New Guinea and Solomons (in Bismarck before migration to Vanuatu or in Vanuatu after initial settlement) brought with it societal changes to Vanuatu that caused it to be a different place from islands further east (cf. Pawley's idea of the same process at different speeds). Besides the possible cultural influence on attitudes and societal organisation, they may also have brought with them their own cultural heritage which would add to the diversity in itself.
 
@@ -482,7 +466,7 @@ It was not possible to take into account historic population size into this stud
 
 %It is beyond the scope of this study to fully investigate the causality of language diversification in Remote Oceania. Causality in cultural evolution is very complicated, since factors can interact on many levels and it is difficult to control for unknown variables and proxy effects (c.f \citet{roberts2013linguistic}). In this instance, we will be satisfied with testing if there is a correlation between societal structure and language diversity that is still signifncant once environmental and settlement time has been incorporated into the model.
 
-Similarly to \citet{gavin2012island}, \citet{hua2019ecological} and others, the results of this study indicate that environmental factors, as encapsulated by the principal components, play some in explaining language diversity in Remote Oceania. However, size, time depth and political complexity are clearly necessary to take into account for this region.
+Similarly to \citet{gavin2012island}, \citet{hua2019ecological} and others, the results of this study indicate that environmental factors, as encapsulated by the principal components, play some role in explaining language diversity in Remote Oceania. However, size, time depth and political complexity are clearly necessary to take into account for this region.
 
 %This is most likely because most of the island groups share a similar climate, and there is therefore not enough variation to tease them apart.
 
